KYLIN-5523 computed column as join key & partition column